# evm-trace

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  work-item.md
.github/workflows/: commitlint.yaml  prtitle.yaml  publish.yaml  test.yaml
evm_trace/: __init__.py  _pydantic_compat.py  base.py  display.py  enums.py  gas.py  geth.py  parity.py  utils.py  vmtrace.py
tests/: conftest.py  expected_traces.py  test_base.py  test_call_tree.py  test_enums.py  test_gas.py  test_gas_report.py  test_geth.py  test_parity.py  test_parity_trace.py  test_trace_frame.py
tests/data/evm_trace/: call.json  delegate_call.json  frame.json  mutable_call.json  static_call.json
tests/data/geth/: call.json  create2_structlogs.json  create_call.json
tests/data/parity/: create.json  create2.json  create_revert.json  error.json  revert.json  revert_with_message.json  selfdestruct.json  trace1.json  trace3.json
